--- a/movies/templates/movies/movie_list.html
+++ b/movies/templates/movies/movie_list.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<form action="" method="get">
+    <input type="search" name="movie_name">
+    <button type="submit">Search</button>
+</form>
 {% for movie_item in movie_objects %}
     {{ movie_item.name }}
     <br>
